--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div><a href="https://github.com/NANDU-NMV"><i class='bx bxl-twitter'></i></a></div>
   <div><a href="https://www.linkedin.com/in/nandumv/"><i class='bx bxl-linkedin-square' ></i></a></div>
 </div><br><br>
-<section name="about" class="about" id="home" >
+<section name="about" class="about" id="about" >
   <div id="about-img">
       <img src="fotor-2024033093553.png" alt="">
   </div>
